--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "batch-images-cropper",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://blurymind.github.io/batch-images-cropper",
-  "main": ".",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
